<resources>
    <string name="app_name">TopTierTabletop</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="user_Name">""</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home_page">Home Page</string>
    <string name="player_page">Player Page</string>
    <string name="party_page">Party Page</string>
    <string name="new_game">New Game</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC_PdvU4DhLBMII-Lk6JhW8q2PmbJXpEHM</string>


</resources>
